# ros-viz-tools

laser_viz/: CMakeLists.txt  package.xml
laser_viz/src/: SquareMarker.cpp  SquareMarker.hpp  SquareMarkerArray.cpp  SquareMarkerArray.hpp  laser_viz_obstacles.cpp  laser_viz_obstacles_array.cpp  laser_viz_test.cpp
rviz_algorithm_viewer/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_algorithm_viewer/msg/: Cluster.msg  Cluster2.msg  ClusterField.msg  ClusterPoint.msg
rviz_algorithm_viewer/scripts/: cluster_test_cluster_display.py  cluster_test_send_msg.py  test_cluster_display.py  test_laser_scanner_clustering.py  test_random_points_clustering.py
rviz_algorithm_viewer/src/: cluster_display.cpp  cluster_display.h  cluster_visual.cpp  cluster_visual.h  color_transformer.cpp  color_transformer.h
