<?xml version="1.0"?>
<package>
  <name>laser_viz</name>
  <version>0.0.0</version>
  <description>3D debugging tools laser scanner.</description>

  <maintainer email="david.bitonneau@gmail.com">David Bitonneau</maintainer>
  <author email="david.bitonneau@gmail.com">David Bitonneau</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>

  </export>
</package>
